--- a/assets/manifest-DTIUjMis.json
+++ b/assets/manifest-DTIUjMis.json
@@ -1,7 +1,7 @@
 {
-  "name": "HTMLPlayer",
-  "short_name": "HTMLPlayer",
-  "start_url": "/HTMLPlayer/",
+  "name": "HTMLPlayerBeta",
+  "short_name": "HTMLPlayerBeta",
+  "start_url": "/HTMLPlayerBeta/",
   "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#2196F3",
